WELP

Every change will now be uploaded to GitHub and Facebook.

New Version 0.0.1a - alpha:
- New command: say.

Update 0.0.1b - alpha:
- New command: spotify info (stfinfo), purge.

Update 0.0.2 - alpha:
- New command: userinfo (whois), serverinfo.
- Updated: Embed Messages.

Update 0.1.1 - alpha:
- Updated: imitate command (previous: say), avatar and description.
- New Slash Command: userinfo (+1 optional: member), serverinfo.

Update 0.2.1 - alpha:
- Modularized the whole codebase. (Took me 2 weeks, bruh)
- Removed comments (temporarily).
- New Command: ping.
- New Slash Command: ping.

Update: 0.3.1 - alpha: (I'm back after 3 months because of deadlines and school is so f**ked up)
- Added Database: MongoDB. (4 days to look up and code)
- New Command: changeprefix. (with the new database implementation) (You can now change the bot's prefix for your own Discord server)
- Events: on_message, on_guild_join (You can get the bot's prefix of the server by tagging the bot itself, and the bot can also collect some information about the server when joining the server for the first time (and second, third, fourth, etc...) (no security alerts of course >:) )
- Coming Soon(?): timeout command, help command.

Update: 0.4.1 - alpha:
- Removed: changeprefix (unnecessary feature)
- New Command: help.
- New Slash Command: help.

Update 0.5.1 - alpha:
- Revamped codebase (yes my past me fucked up really hard)
- Added cogs: encryption (RSA, AES)

(More To Come)