@@ -1,7 +1,6 @@
 import asyncio
 from typing import Any, List, Mapping, Optional, Tuple
-from discord import *
-# from discord import Colour, Embed, Interaction, Member, TextChannel, app_commands
+from discord import Colour, Embed, Interaction, Member, TextChannel, app_commands
 from discord.ext import commands, tasks
 from discord.utils import get
 
